--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 516x-website
-description: Comparative Analysis of Supervised Learning Techniques: Naive Bayes, Support Vector Machines, and Convolutional Neural Networks for Binary Weed Detection
+title: [516x-website]
+description: [Comparative Analysis of Supervised Learning Techniques: Naive Bayes, Support Vector Machines, and Convolutional Neural Networks for Binary Weed Detection]
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
