--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,3 @@
-title: [516x-website]
-description: [Comparative Analysis of Supervised Learning Techniques: Naive Bayes, Support Vector Machines, and Convolutional Neural Networks for Binary Weed Detection]
-show_downloads: true
-google_analytics:
 theme: jekyll-theme-slate
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Title of Project
+description: ABE516X Project
