--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: NB, SVM, and CNN for Weed Detection in Soybean Crops 
+title: Binary Classification Methods for Weed Detection in Soybean Crops
 description: ABE516X Project
