--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Binary Classification Methods for Weed Detection
+title: Comparative Evaluation of Supervised Learning Techniques for Binary Weed Detection
 description: ABE516X Project
